Changes for the 3.x versions of our plugins