@@ -22,13 +22,14 @@ plugins {
     id 'jacoco'
     id 'nebula.info' version '2.2.4'
     id 'nebula.contacts' version '2.2.0'
+    id 'nebula.dependency-lock' version '3.0.0'
     id 'nebula.maven-publish' version '4.0.1'
-    id 'nebula.nebula-release' version '3.0.0'
+    id 'nebula.nebula-release' version '3.0.1'
     id 'nebula.nebula-bintray' version '3.1.0'
-    id 'com.gradle.plugin-publish' version '0.9.1'
     id 'nebula.javadoc-jar' version '4.0.1'
     id 'nebula.source-jar' version '4.0.1'
     id 'nebula.maven-apache-license' version '4.0.1'
+    id 'com.gradle.plugin-publish' version '0.9.1'
     id 'com.github.kt3k.coveralls' version '2.4.0'
 }
 
@@ -45,31 +46,25 @@ contacts {
     }
 }
 
-apply from: 'https://raw.githubusercontent.com/nebula-plugins/nebula-core/596569bf3e7bd32da076784a8273dbd145bc016f/common.gradle'
-
-ext {
-    pluginGradleVersion = 2.2
-}
+apply from: 'https://raw.githubusercontent.com/nebula-plugins/nebula-core/d60b3a0325a861be8082ae8c92cd403aecbc8580/common.gradle'
 
 dependencies {
-    compile "com.netflix.nebula:gradle-contacts-plugin:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:gradle-dependency-lock-plugin:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:gradle-info-plugin:${pluginGradleVersion}.+"
+    compile "com.netflix.nebula:gradle-contacts-plugin:2.+"
+    compile "com.netflix.nebula:gradle-dependency-lock-plugin:3.+"
+    compile "com.netflix.nebula:gradle-info-plugin:2.+"
 
-    compile "com.netflix.nebula:nebula-bintray-plugin:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:nebula-core:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:nebula-project-plugin:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:nebula-publishing-plugin:${pluginGradleVersion}.+"
-    compile "com.netflix.nebula:nebula-release-plugin:${pluginGradleVersion}.+"
+    compile "com.netflix.nebula:nebula-bintray-plugin:3.+"
+    compile "com.netflix.nebula:nebula-core:3.+"
+    compile "com.netflix.nebula:nebula-project-plugin:3.+"
+    compile "com.netflix.nebula:nebula-publishing-plugin:4.+"
+    compile "com.netflix.nebula:nebula-release-plugin:3.+"
     compile 'nl.javadude.gradle.plugins:license-gradle-plugin:0.+'
 
-    testCompile 'org.ajoberstar:gradle-git:1.2.0'
+    testCompile 'org.ajoberstar:gradle-git:1.3.0'
 }
 
 test {
-    minHeapSize = '128m'
     maxHeapSize = '512m'
-    jvmArgs '-XX:MaxPermSize=256m'
 }
 
 pluginBundle {
